kubernetes/apps/networking/gateway/gw-cf-tunnel.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-cf-tunnel

spec:
  gatewayClassName: cilium-clusterip
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${CLUSTER_EXTERNAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${CLUSTER_EXTERNAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: cluster-external-domain-tls
