kubernetes/apps/networking/gateway/gw-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations: {}
  labels:
    gateway.freckle.systems/dns: cloudflare
  name: external

spec:
  gatewayClassName: cilium
  listeners:
    - name: frecklesystems-http
      protocol: HTTP
      port: 80
      hostname: "*.freckle.systems"
      allowedRoutes:
        namespaces:
          from: Same
    - name: frecklesystems-https
      protocol: HTTPS
      port: 443
      hostname: "*.freckle.systems"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: frecklesystems-tls
    - name: frecklefamily-http
      protocol: HTTP
      port: 80
      hostname: "*.freckle.family"
      allowedRoutes:
        namespaces:
          from: Same
    - name: frecklefamily-https
      protocol: HTTPS
      port: 443
      hostname: "*.freckle.family"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: frecklefamily-tls
