kubernetes/apps/networking/gateway/gw-media-public.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.freckle.systems/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations: {}
  labels:
    gateway.freckle.systems/dns: cloudflare
  name: media-public

spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      ipam.freckle.systems/lb-pool: public
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${MEDIA_DOMAIN:-freckle.services}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${MEDIA_DOMAIN:-freckle.services}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: media-tls
