kubernetes/apps/networking/gateway/gw-tailscale.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.freckle.systems/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale
  labels:
    gateway.freckle.systems/dns: cloudflare

spec:
  gatewayClassName: cilium-tailscale
  infrastructure:
    annotations:
      tailscale.com/hostname: ${CLUSTER_NAME:=cluster}-gw
      tailscale.com/tags: "tag:${CLUSTER_NAME:=k8s}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${CLUSTER_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: frecklesystems-tls
