kubernetes/apps/networking/gateway/redirect.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpsredirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: tailscale
      sectionName: http
    - name: tailscale-media-mgmt
      sectionName: http
    - name: external
      sectionName: frecklesystems-http
    - name: external
      sectionName: frecklefamily-http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
